# status-page-lint

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/status_page_lint/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_status_page_lint.py
